      reportbug and querybts, removing outdated information and also applying
      some stylistic changes; Closes: #559678
  * debian/control
    - added ${misc:Depends} to binary packages
    - bump Standards-Version to 3.8.3, removal or outdated localized contents
      and manpages updated of CLI options were needed
  * debian/copyright
    - update location of `handle_bugscript`

 -- Sandro Tosi <morph@debian.org>  Thu, 07 Jan 2010 11:14:16 +0100

reportbug (4.9) unstable; urgency=low

  [ Sandro Tosi ]
  * debian/rules
    - check if versions are in sync only when releasing (allowing for easier
      development)
  * reportbug/ui/gtk2_ui.py
    - replace python-gnome2-extras with python-gtkspell when suggesting what
      package to install for spell checking; thanks to David Steiner for the
      report; Closes: #551046
    - clarified the dialog message that requires installation of additional
      packages; thanks to Filipus Klutiero for the report; Closes: #554589
  * debian/control
    - added a Conflicts on 'debsums (<< 2.0.47)', to properly require the
      correct version of debsums; thanks to Flavio Stanchina for the report;
      Closes: #552364
  * reportbug/ui/urwid_ui.py
    - added missing arguments to handle_bts_query call; thanks to David Bremner
      for the report; Closes: #542309
  * reportbug/submit.py
    - don't encode email addresses when print report of mail recipients (after
      mail being sent); thanks to Raphaël Hertzog for the report and Carl Chenet
      for the patch; Closes: #546914
  * bin/querybts
    - enable '-u' options, along with '--ui'; thanks to David Bremner for the
      report and to Carl Chenet for the patch; Closes: #542312
  * bin/reportbug
    - '--template' option forces the 'text' UI (it's only useful with that);
      thanks to Johan Kullstam for the report; Closes: #543281
    - clarified the message displayed when reporting a bug against an orphaned