@@ -8,7 +8,7 @@ Packaged-Date: Fri, 14 May 1999 01:07:35 -0500
 Files: *
 Copyright:
     © 1999-2006 Chris Lawrence
-    Copyright (C) 2008-2009 Sandro Tosi <morph@debian.org>
+    Copyright (C) 2008-2010 Sandro Tosi <morph@debian.org>
 License: other
     # This program is freely distributable per the following license:
     #
